[package]
name = "s5_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bincode = "1.3.3"
bs58 = "0.4.0"
concat-arrays = "0.1.2"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
rand = "0.8.5"
rand_core = "0.6.4"
rmp = "0.8.11"
rmp-serde = "1.1.1"
rmpv = "1.0.0"
serde = { version = "1.0.145", features = ["derive"] }
sha2 = "0.10.6"
sled = "0.34.7"
state = "0.5.3"
tokio = { version= "1.21.2", features = ["full"] }
toml = "0.5.9"
url = "2.3.1"
warp = "0.3.3"
